--- a/package.json
+++ b/package.json
@@ -5,8 +5,9 @@
   "main": "index.js",
   "license": "MIT",
   "dependencies": {
-    "react": "^16.0.0",
-    "react-native": "^0.49.3",
-    "react-native-svg": "^5.4.2"
+    "react": "18.1.0",
+    "react-native": "0.70.8",
+    "react-native-svg": "13.4.0",
+    "typescript": "^4.6.3",
   }
 }
