--- a/package.json
+++ b/package.json
@@ -8,6 +8,6 @@
     "react": "18.1.0",
     "react-native": "0.70.8",
     "react-native-svg": "13.4.0",
-    "typescript": "^4.6.3",
+    "typescript": "^4.6.3"
   }
 }
